Version 0.3.9
-------------
* Run most tests both with a regular Form and a ModelForm, to avoid regressions such as Issue #40

Version 0.3.8
-------------
* Fixed a critical bug (Issue #40) that would generate two captcha objects, and the test would always fail. Thanks @pengqi for the heads-up.


Version 0.3.7
-------------
* Improved Django 1.5 and Django HEAD (1.6) compatibility (thanks @uruz)
* Python3 compatibility (requires six and Pillow >= 2.0)
* Added zh_CN localization (thanks @mingchen)
* Make sure the generated challenge is a string type (the math challenge was probably broken -- Issue #33, thanks @YDS19872712)
* Massive cleanup and refactoring (Issue #38, thanks @tepez)
* Test refactoring to test a couple generators that weren't tested by default

Version 0.3.6
-------------
* Django 1.5 compatibility (only affects tests)
* Italian localization (thanks @arjunadeltoso)
* Russian localization (thanks @mikek)
* Fixed issue #17 - Append content-length to response (thanks @shchemelevev)
* Merged PR #19 - AJAX refresh of captcha (thanks @artofhuman)
* Merged PR #22 - Use op.popen instead of subprocess.call to generate the audio CAPTCHA (thanks @beda42)
* Fixed issue #10 - uniformize spelling of "CAPTCHA" (thanks @mikek)
* Fixed issue #12 - Raise error when try to initialize CaptchaTextInput alone and/or when try to initialize CaptchaField with widget keyword argument (thanks @vstoykov)
* Merged PR #15 - Allow a 'test mode' where the string 'PASSED' always validates the CAPTCHA (thanks @beda42)
* Dutch translation (thanks @leonderijke)
* Turkish translation (thanks @gkmngrgn)

Version 0.3.5
-------------
* Fixes issue #4: Fixes id_for_label malfunction with prefixed forms (thanks @lolek09)

Version 0.3.4
-------------
* Fixes issue #3: regression on Django 1.4 when USE_TZ is False

Version 0.3.3
-------------
* Django 1.4 Time zones compatibility
* PEP 8 love

Version 0.3.2
-------------
* Added a test project to run tests
* Added South migrations